Food generation and consumption

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/functions.js"></script>
 </head>
 <body>
+    <h1>Welcome to Snake!</h1>
     <div class="canvas-container">
         <canvas id="gameCanvas" width="600" height="600"></canvas>
     </div>
@@ -19,5 +20,4 @@
         </div>
     </div>
     
-    <script src="js/snake.js"></script>
 </body>
