--- a/index.html
+++ b/index.html
@@ -5,46 +5,57 @@
     <title>Snake!</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
     <script src="js/snake.js"></script>
     <script src="js/functions.js"></script>
 </head>
 <body>
-    <h1>Welcome to Snake!</h1>
-    <div class ="instructions">
-        <p>Use the arrow keys to control the snake.</p>
-        <p>Eat the food to grow the snake.</p>
-        <p>Don't run into the walls or yourself!</p>
-    </div>
-    <div class = "settings">
-        <button id="startButton" onclick="startGame()">Start</button>
-        <button id="stopButton" class="hidden" onclick="stopGame()">Stop</button>
-        <button id="resumeButton" class="hidden" onclick="resumeGame()">Resume</button>
-        <button id="resetButton" onclick="reset()">Reset</button>
-    </div>
-    <div class="instructions">
-        <div id="score"></p>
-    </div>
-    <div class="canvas-container">
-        <canvas id="gameCanvas" width="600" height="600"></canvas>
-    </div>
-    <div class="settings">
-        <label for="speed">Speed:</label>
-        <input type="range" id="speed" min="100" max="300" value="150" step="1">
-        <label for="color">Snake Color:</label>
-        <input type="color" id="color" value="green">
-        <label for="bgColor">Background Color:</label>
-        <input type="color" id="bgColor" value="lightblue">
-    </div>
-    <div class ="instructions">
-        <p>If you change any settings, reset to see changes.</p>
-        <p>Use the sliders to adjust the speed of the snake.</p>
-        <p>Click on the color boxes to change the snake and background colors.</p>
-        <p>Click "Start" to begin the game.</p>
-    </div>
-    <div id ="modalOverlay" class="hidden">
+    <header>
+        <h1>Welcome to Snake!</h1>
+        <div class ="submenu">
+            <h2 href="#">Leaderboards</h2>
+            <h2 href="#">Past Scores</h2>
+        </div>
+    </header>
+    <main>
+        <section class="instructions">
+            <p>Use the arrow keys to control the snake.</p>
+            <p>Eat the food to grow the snake.</p>
+            <p>Don't run into the walls or yourself!</p>
+        </section>
+        <section class="settings">
+            <button id="startButton" onclick="startGame()">Start</button>
+            <button id="stopButton" class="hidden" onclick="stopGame()">Stop</button>
+            <button id="resumeButton" class="hidden" onclick="resumeGame()">Resume</button>
+            <button id="resetButton" onclick="reset()">Reset</button>
+        </section>
+        <section class="instructions">
+            <div id="score"></div>
+        </section>
+        <section class="canvas-container">
+            <canvas id="gameCanvas" width="600" height="600"></canvas>
+        </section>
+        <section class="settings">
+            <label for="speed">Speed:</label>
+            <input type="range" id="speed" min="100" max="300" value="150" step="1">
+            <label for="color">Snake Color:</label>
+            <input type="color" id="color" value="#008000">
+            <label for="bgColor">Background Color:</label>
+            <input type="color" id="bgColor" value="#ADD8E6">
+        </section>
+        <section class="instructions">
+            <p>If you change any settings, reset to see changes.</p>
+            <p>Use the sliders to adjust the speed of the snake.</p>
+            <p>Click on the color boxes to change the snake and background colors.</p>
+            <p>Click "Start" to begin the game.</p>
+        </section>
+    </main>
+    <div id="modalOverlay" class="hidden">
         <div id="customAlert" class="hidden">
             <span id="alert"></span>
-            <button id="alertButton" onclick=hideAlert()>OK</button>
+            <button id="alertButton" onclick="hideAlert()">OK</button>
         </div>
     </div>
 </body>
