--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Snake!</h1>
-        <div class ="submenu">
+        <h1>Snake Game</h1>
+        <nav class ="submenu">
             <h2 href="#">Leaderboards</h2>
             <h2 href="#">Past Scores</h2>
-        </div>
+        </nav>
     </header>
     <main>
         <section class="instructions">
