Code cleanup and added interactivity for links and buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <h1>Snake Game</h1>
         <nav class ="submenu">
-            <h2 href="#">Leaderboards</h2>
-            <h2 href="#">Past Scores</h2>
+            <a href="#">Leaderboards</a>
+            <a href="#">Past Scores</a>
         </nav>
     </header>
     <main>
