Updated README, minor changes to styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button type="button" id="switchAuth">Switch to Register</button>
                 <span id="authMsg" class="hidden"></span>
             </form>
-        </div>#co
+        </div>
         <div id="gameUI">
             <section class ="settings">
                 <button type="button" id="leaderboardBtn" class="submenu-link">Leaderboards</button>
